smm-1.8.0/multiCloudDeployments/control/Tea-Store/istio/routing/0-destinationRules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: teastore-image-destinationrule
spec:
  host: teastore-image
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: teastore-webui-destinationrule
spec:
  host: teastore-webui
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
