smm-1.8.0/multiCloudDeployments/control/Tea-Store/istio/routing/2-injection-delay-webui-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teastore-image-injection-delay
spec:
  hosts:
    - "*"
  gateways:
    - teastore-webui-ingressgateway
  http:
  - fault:
      delay:
        percentage:
          value: 10
        fixedDelay: 5s
    route:
    - destination:
        host: teastore-webui 
        subset: v2
        port:
          number: 8080
