smm-1.8.0/multiCloudDeployments/control/Tea-Store/istio/routing/4-http-abort-injection-image.yaml
# Copyright (c) 2021, Cisco Systems, Inc. and/or its affiliates. All rights reserved. 
# Licensed under the Apache 2.0 license, see LICENSE file.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-abort-injection-image
spec:
  hosts:
  - teastore-image
  http:
  - fault:
      abort:
        percentage: 
          value: 100
        httpStatus: 500
    route:
    - destination:
        host: teastore-image
        subset: v1
        port:
          number: 8080
  - route:
    - destination:
        host: teastore-image
        subset: v1
        port:
          number: 8080
