smm-1.8.0/multiCloudDeployments/control/Tea-Store/istio/routing/initial-status.yaml
# If you apply any of the istio routing manifests (1-4) and then remove them, you have to apply this
# manifest to restore the initial routing status, otherwise the app will not be reachable

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-ingress-tea-store
  namespace: tea-store
spec:
  hosts:
  - "*"
  gateways:
  - teastore-webui-ingressgateway
  http:
  - route:
    - destination:
        host: teastore-webui
        port:
          number: 8080
